# FDTD

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  bool.h  circleModel.c  circleModel.h  cmake_install.cmake  drawer.c  drawer.h  fdtd  fdtdTE.c  fdtdTE.h  fdtdTE_upml.c  fdtdTE_upml.h  fdtdTM.c  fdtdTM.h  fdtdTM_upml.c  fdtdTM_upml.h  field.c  field.h  function.h  main.c  models.c  models.h  noModel.c  noModel.h  sampleCMakeLists.txt  sampleLinuxCMakeLists.txt  sampleMacCMakeLists.txt  simulator.c  simulator.h
TEupml/: mie.txt
TM/: mie.txt
TMupml/: analyze_mieTM.txt  data1.txt  mie.txt
